--- a/index.html
+++ b/index.html
@@ -1,27 +1,208 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Login</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SecureChat</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Roboto', sans-serif;
+    }
+    body {
+      height: 100vh;
+      display: flex;
+      background-color: #111b21;
+      color: white;
+    }
+    .sidebar {
+      width: 28%;
+      background-color: #202c33;
+      padding: 2rem 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      border-right: 1px solid #2a3942;
+    }
+    .chat-area {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      position: relative;
+      overflow: hidden;
+    }
+    .tabs {
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+    }
+    .tabs label {
+      padding: 0.5rem 1rem;
+      background-color: #2a3942;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    .tabs input[type="radio"] {
+      display: none;
+    }
+    .tabs input:checked + label {
+      background-color: #00a884;
+    }
+    select, textarea, button {
+      width: 100%;
+      padding: 0.75rem;
+      border-radius: 10px;
+      border: none;
+      background-color: #2a3942;
+      color: white;
+      outline: none;
+      font-size: 1rem;
+    }
+    button {
+      background-color: #00a884;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .panel-container {
+      display: flex;
+      width: 200%;
+      height: 100%;
+      transition: transform 0.6s ease-in-out;
+    }
+    .panel {
+      width: 50%;
+      padding: 1rem;
+      overflow-y: auto;
+    }
+    .message-bubble {
+      max-width: 60%;
+      padding: 0.75rem 1rem;
+      border-radius: 20px;
+      margin: 0.5rem;
+      color: white;
+      word-wrap: break-word;
+      font-size: 1rem;
+    }
+    .sent {
+      background-color: #005c4b;
+      align-self: flex-end;
+    }
+    .received {
+      background-color: #2a3942;
+      align-self: flex-start;
+    }
+    .output-container {
+      padding: 1rem;
+      border-top: 1px solid #2a3942;
+      display: flex;
+      gap: 0.5rem;
+      align-items: center;
+      background-color: #202c33;
+    }
+    .output-container textarea {
+      flex: 1;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="login-box">
-            <h2>Login</h2>
-            <form id="loginForm">
-                <div class="textbox">
-                    <input type="text" id="username" placeholder="Username" required>
-                </div>
-                <div class="textbox">
-                    <input type="password" id="password" placeholder="Password" required>
-                </div>
-                <button type="submit" id="submitBtn">Login</button>
-            </form>
-            <div id="error-message"></div>
-        </div>
+  <div class="sidebar">
+    <div class="tabs">
+      <input type="radio" name="mode" id="encrypt-tab" checked onclick="switchMode('encrypt')">
+      <label for="encrypt-tab">Chiffrer</label>
+      <input type="radio" name="mode" id="decrypt-tab" onclick="switchMode('decrypt')">
+      <label for="decrypt-tab">Déchiffrer</label>
     </div>
-    <script src="script.js"></script>
+    <select id="method">
+      <option value="caesar">César</option>
+      <option value="aes">AES</option>
+      <option value="rsa">RSA</option>
+    </select>
+    <textarea id="input" rows="6" placeholder="Tape ton message ici..."></textarea>
+    <button onclick="processMessage()">Convertir</button>
+  </div>
+
+  <div class="chat-area">
+    <div class="panel-container" id="panel-container">
+      <div class="panel" id="encrypt-panel"></div>
+      <div class="panel" id="decrypt-panel"></div>
+    </div>
+    <div class="output-container">
+      <span>Sortie :</span>
+      <textarea id="output" rows="2" readonly></textarea>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsencrypt/bin/jsencrypt.min.js"></script>
+  <script>
+    const caesarShift = 3;
+    const secretKey = 'secret123';
+    const rsaEncryptor = new JSEncrypt();
+    const rsaDecryptor = new JSEncrypt();
+    const keyPair = new JSEncrypt();
+    keyPair.getKey();
+    const pub = keyPair.getPublicKey();
+    const priv = keyPair.getPrivateKey();
+    rsaEncryptor.setPublicKey(pub);
+    rsaDecryptor.setPrivateKey(priv);
+
+    function switchMode(mode) {
+      document.getElementById('panel-container').style.transform = mode === 'encrypt' ? 'translateX(0%)' : 'translateX(-50%)';
+    }
+
+    function processMessage() {
+      const input = document.getElementById('input').value;
+      const method = document.getElementById('method').value;
+      const isEncrypt = document.getElementById('encrypt-tab').checked;
+      let output = '';
+
+      try {
+        if (method === 'caesar') {
+          output = isEncrypt ? encryptCaesar(input) : decryptCaesar(input);
+        } else if (method === 'aes') {
+          output = isEncrypt ? CryptoJS.AES.encrypt(input, secretKey).toString() : CryptoJS.AES.decrypt(input, secretKey).toString(CryptoJS.enc.Utf8);
+        } else if (method === 'rsa') {
+          output = isEncrypt ? rsaEncryptor.encrypt(input) : rsaDecryptor.decrypt(input);
+        }
+      } catch (error) {
+        output = "Erreur de traitement : " + error.message;
+      }
+
+      document.getElementById('output').value = output;
+
+      const panelId = isEncrypt ? 'encrypt-panel' : 'decrypt-panel';
+      const panel = document.getElementById(panelId);
+      panel.innerHTML += `
+        <div class="message-bubble received">${input}</div>
+        <div class="message-bubble sent">${output}</div>
+      `;
+    }
+
+    function encryptCaesar(text) {
+      return text.split('').map(c => {
+        const code = c.charCodeAt(0);
+        if (c.match(/[a-z]/i)) {
+          const base = c === c.toUpperCase() ? 65 : 97;
+          return String.fromCharCode(((code - base + caesarShift) % 26) + base);
+        }
+        return c;
+      }).join('');
+    }
+
+    function decryptCaesar(text) {
+      return text.split('').map(c => {
+        const code = c.charCodeAt(0);
+        if (c.match(/[a-z]/i)) {
+          const base = c === c.toUpperCase() ? 65 : 97;
+          return String.fromCharCode(((code - base - caesarShift + 26) % 26) + base);
+        }
+        return c;
+      }).join('');
+    }
+  </script>
 </body>
 </html>
