--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       width: 50%;
       padding: 1rem;
       overflow-y: auto;
+      max-height: 100%;
     }
     .message-bubble {
       max-width: 60%;
@@ -95,16 +96,8 @@
       background-color: #2a3942;
       align-self: flex-start;
     }
-    .output-container {
-      padding: 1rem;
-      border-top: 1px solid #2a3942;
-      display: flex;
-      gap: 0.5rem;
-      align-items: center;
-      background-color: #202c33;
-    }
-    .output-container textarea {
-      flex: 1;
+    .error {
+      color: red;
     }
   </style>
 </head>
@@ -123,16 +116,13 @@
     </select>
     <textarea id="input" rows="6" placeholder="Tape ton message ici..."></textarea>
     <button onclick="processMessage()">Convertir</button>
+    <p id="error-message" class="error"></p>
   </div>
 
   <div class="chat-area">
     <div class="panel-container" id="panel-container">
       <div class="panel" id="encrypt-panel"></div>
       <div class="panel" id="decrypt-panel"></div>
-    </div>
-    <div class="output-container">
-      <span>Sortie :</span>
-      <textarea id="output" rows="2" readonly></textarea>
     </div>
   </div>
 
@@ -159,6 +149,7 @@
       const method = document.getElementById('method').value;
       const isEncrypt = document.getElementById('encrypt-tab').checked;
       let output = '';
+      document.getElementById('error-message').textContent = '';  // Clear any previous errors
 
       try {
         if (method === 'caesar') {
@@ -169,10 +160,9 @@
           output = isEncrypt ? rsaEncryptor.encrypt(input) : rsaDecryptor.decrypt(input);
         }
       } catch (error) {
-        output = "Erreur de traitement : " + error.message;
+        output = '';
+        document.getElementById('error-message').textContent = "Erreur de traitement : " + error.message;
       }
-
-      document.getElementById('output').value = output;
 
       const panelId = isEncrypt ? 'encrypt-panel' : 'decrypt-panel';
       const panel = document.getElementById(panelId);
@@ -180,6 +170,7 @@
         <div class="message-bubble received">${input}</div>
         <div class="message-bubble sent">${output}</div>
       `;
+      panel.scrollTop = panel.scrollHeight;  // Scroll to the latest message
     }
 
     function encryptCaesar(text) {
